--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  
+  margin: 5px;
+  padding: 5px;
+  font-family: 'Poppins', sans serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+
+  display: grid;
+  font-size: 14px;
+  font-weight: 400;
+  height: 100vh;
+}
+
+.body-container {
+  display: grid;
+  grid-template-areas: "left right";
+  max-width: 900px;
 }
