--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;}
+
 .App {
   text-align: center;
-}
+  font-size: 20px;}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.header {
-  background-color: #282c34;
-  min-height: 20vh;
+.Header {
+  background-color: #C2002F;
+  min-height: 15vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+  border: 2px black solid;}
 
-.App-link {
-  color: #61dafb;
-}
+form {
+  padding: 10px;
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background-color: #C2002F;
+  border: 2px black solid;}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.Track-Listing {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border: 2px black solid;
+  font-size: 20px;}
+
+li {
+  width: 100%;
+  padding: 0;}
+
+.AddTrack {
+  border-color: black;
+  border-radius: 10px;
+  font-size: 20px;}
+
+input {
+  font-size: 20px;
+  color: black;
+  cursor: pointer;
+  width: 180px;}
+
+select {
+  font-size: 20px;
+  color: black;
+  cursor: pointer;
+  width: 180px;}
+
+.Delete-Track {
+  width: 100px;
+  color: white;
+  border-color: black;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: #C2002F;
+  font-size: 20px;}
+
+
+.Navigation {
+  margin-left:100px;
+  width: 250px;
+  color: white;
+  border-color: black;
+  border-radius: 20px;
+  font-size: 20px;
+  border: 1px solid white;
+  list-style: none;}
+
+.NavigationLink {
+ text-decoration: none;
+  color: white;
+  font-size: 25px;}
+
+.TrackSequence {
+  font-size: 20px;
+  background-color:#C2002F;
+  color: white;
+  width: 250px;}
